service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-service
  namespace: webhook
spec:
  selector:
    app: webhook-app
  ports:
  - port: 80
    targetPort: 5000
  type: NodePort
