ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-ingress
  namespace: webhook
  annotations:
    kubernetes.io/ingress.global-static-ip-name: webhook-ip-name
    networking.gke.io/managed-certificates: webhook-certificate
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: "webhook.ukmaker.co.uk"
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/*"
        backend:
          service:
            name: webhook-service
            port:
              number: 80
